learning-tracker/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: learning-tracker-api
  name: learning-tracker-api
  namespace: tenant-a-learning-tracker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: learning-tracker-api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: learning-tracker-api
    spec:
      containers:
        - image: europe-west4-docker.pkg.dev/xebia-k8s-training-1/xebia-k8s-training-1-ghcr/tsclabs-eu/lab-istio-rollouts/learning-tracker-api:v1
          name: learning-tracker-api
          resources: {}
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: learning-tracker-api
  name: learning-tracker-api
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: learning-tracker-api

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: learning-tracker-frontend
  name: learning-tracker-frontend
  namespace: tenant-a-learning-tracker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: learning-tracker-frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: learning-tracker-frontend
    spec:
      containers:
        - image: europe-west4-docker.pkg.dev/xebia-k8s-training-1/xebia-k8s-training-1-ghcr/tsclabs-eu/lab-istio-rollouts/learning-tracker-frontend:v1
          name: learning-tracker-frontend
          resources: {}
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: learning-tracker-frontend
  name: learning-tracker-frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: learning-tracker-frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mariadb
  name: mariadb
  namespace: tenant-a-learning-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mariadb
    spec:
      containers:
        - image:  europe-west4-docker.pkg.dev/xebia-k8s-training-1/xebia-k8s-training-1/mariadb
          name: mariadb
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mariadb
  name: mariadb
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mariadb
status:
  loadBalancer: {}
